--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ts-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample TypeScript project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./app/dist",
     "build": "npx tsc",
-    "server": "npx http-server ./app",
-    "all": "npm run clean && npm run build && npm run server"
+    "start": "npx http-server ./app",
+    "all": "npm run clean && npm run build && npm run start"
   },
   "repository": {
     "type": "git",
